feat: 添加新的友链 AirTouch’s Blog

--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -75,6 +75,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">https://ie.cx</div>
             </a>
+            <a href="https://blog.airtouch.top" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://blog.airtouch.top/avatar.webp" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">AirTouch’s Blog</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">岩间琉璃云间月</div>
+            </a>
             <a href="https://blog.yeqing.net/" target="_blank" class="friend-card">
                 <div class="flex items-center gap-2">
                     <img src="https://blog.yeqing.net/favicon.ico" class="w-5 h-5 rounded"/>
