feat: 添加RukaaX博客到友链列表

--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -89,6 +89,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">https://ie.cx</div>
             </a>
+            <a href="https://blogs.rukaax.top/" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://blogs.rukaax.top/wp-content/uploads/2025/07/cropped-1753627554-ICON.webp" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">RukaaX Blogs</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">RukaaX-一名高中牲的博客</div>
+            </a>
             <a href="https://xsl.im" target="_blank" class="friend-card">
                 <div class="flex items-center gap-2">
                     <img src="https://blog.airtouch.top/avatar.webp" class="w-5 h-5 rounded"/>
