--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -390,6 +390,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">个人的博客小站，分享下技术和生活。May you, the beauty of this world, always shine</div>
             </a>
+            <a href="https://gavin-blog.pages.dev" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://gavin-blog.pages.dev/assets/website/avatar.webp" loading="lazy" class="w-5 h-5 rounded">
+                    <div class="font-bold text-black dark:text-white">Gavin's Blog</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">一个内容成分复杂的博客小站。</div>
+            </a>
         </div>
 
         <!-- 申请友链 -->
