--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -466,6 +466,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">Face life with hope.</div>
             </a>
+            <a href="https://chuzoux.top" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://q2.qlogo.cn/headimg_dl?dst_uin=3451860760&spec=0" loading="lazy" class="w-5 h-5 rounded">
+                    <div class="font-bold text-black dark:text-white">chuzouX Blog</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">欢迎大家光临本站，希望大家在这里可以找到自己想要的东西，祝大家玩的开心！！</div>
+            </a>
         </div>
 
         <!-- 申请友链 -->
